# Plant-Watering-And-Monitering-Client

./: .gitignore  AppShell.xaml  MainPage.xaml  MainPage.xaml.cs  OptionsView.xaml  PlantWateringAndMonitoringSystem.csproj  README.md  SensorGraph.cs  mainwindow.cpp  mainwindow.ui
PlantWateringAndMonitoringSystem/: App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CMakeLists.txt  CMakeLists.txt.user.99c54fe  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  OptionsPage.xaml  OptionsPage.xaml.cs  OptionsView.xaml.cs  PlantWateringAndMonitoringSystem.csproj  addtopicdialog.cpp  addtopicdialog.h  addtopicdialog.ui  connectplantdialog.cpp  connectplantdialog.h  connectplantdialog.ui  graph.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
PlantWateringAndMonitoringSystemMAUI/: App.xaml  App.xaml.cs  CMakeLists.txt  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  PlantWateringAndMonitoringSystem.sln  SensorGraph.cs
PlantWateringAndMonitoringSystemMAUI/Resources/Styles/: Colors.xaml
PythonAzureProxy/PAP/: device.py  pyvenv.cfg
PythonAzureProxy/PAP/Scripts/: activate  activate.bat
